fixed z-index

--- a/slick-1.8.1/slick/slick-theme.scss
+++ b/slick-1.8.1/slick/slick-theme.scss
@@ -206,7 +206,7 @@ $slick-opacity-not-active: 1 !default;
     padding: 0;
     margin: 0;
     width: 100%;
-    z-index: 2;
+    z-index: 1;
     li {
         position: relative;
         display: inline-block;
